# zepp-pc

./: .gitignore  README.md  build.bat  build.sh  build.spec  main.py  pyproject.toml
.claude/: ralph-loop.local.md
.github/workflows/: build.yml
src/: __init__.py
src/ble/: __init__.py  auth.py  client.py  commands.py
src/models/: device.py
src/server/: main.py
src/server/api/: devices.py  zepp.py
src/server/static/: index.html
src/server/static/js/: app.js
tests/: test_commands.py
